--- a/models/imdb/title_crew_model.yml
+++ b/models/imdb/title_crew_model.yml
@@ -17,7 +17,13 @@ models:
         description: "director(s) of the given title"
         tests:
           - not_null
+          - array_column_exists_in_table:
+              model2: ref('name_basics_model')
+              array_column2: nconst
       - name: writers
         description: "writer(s) of the given title"
         tests:
           - not_null
+          - array_column_exists_in_table:
+              model2: ref('name_basics_model')
+              array_column2: nconst
