feature: add missing test and cleanse

--- a/models/imdb/title_crew_model.yml
+++ b/models/imdb/title_crew_model.yml
@@ -2,7 +2,8 @@
 version: 2
 
 models:
-  - name: title_crew_model
+  #- name: title_crew_model
+  - name: title_crew_model_cleansed
     description: "The crew working on the production  of the title"
     columns:
       - name: tconst
