feature: add more tests and cleansing rules

--- a/models/imdb/title_akas_model.yml
+++ b/models/imdb/title_akas_model.yml
@@ -27,6 +27,9 @@ models:
         description: "an alphanumeric identifier of the title"
         tests:
           - not_null
+          - relationships:
+              to: ref('title_basics_model')
+              field: tconst
       - name: ordering
         description: "a number to uniquely identify rows for a given titleId"
         tests:
