--- a/models/imdb/title_basics_model.yml
+++ b/models/imdb/title_basics_model.yml
@@ -7,38 +7,6 @@ models:
     tests:
       - dbt_utils.expression_is_true:
             expression: "len(genres) < 4"
-      - array_column_has_specific_values:
-          id_column: tconst
-          array_column: genres
-          value_list:
-            - Comedy
-            - Crime
-            - Family
-            - Romance
-            - Documentary
-            - Musical
-            - Mystery
-            - Horror
-            - Short
-            - Action
-            - Sci-Fi
-            - Fantasy
-            - Talk-Show
-            - Adventure
-            - Drama
-            - War
-            - Game-Show
-            - Reality-TV
-            - Film-Noir
-            - Music
-            - History
-            - Thriller
-            - Western
-            - Animation
-            - Adult
-            - News
-            - Biography
-            - Sport
     columns:
       - name: tconst
         description: "alphanumeric unique identifier of the title"
@@ -80,3 +48,6 @@ models:
         description: "includes up to three genres associated with the title"
         tests:
           - not_null
+          - array_column_exists_in_table:
+              model2: ref('genres')
+              array_column2: genre
