--- a/models/imdb/title_principals_model.yml
+++ b/models/imdb/title_principals_model.yml
@@ -33,6 +33,9 @@ models:
         description: "the category of job that person was in"
         tests:
           - not_null
+          - relationships:
+              to: ref('job_categories')
+              field: job_category
       - name: job
         description: "the specific job title if applicable"
       - name: characters
