fix: use one from main branch

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -4,7 +4,7 @@ version: 2
 sources:
   - name: external_source
     meta:
-      external_location: "read_csv('c:/work/imdb_files/{name}.tsv.gz', delim='\t', quote='', all_varchar=true, header=true, AUTO_DETECT=TRUE)"
+      external_location: "read_csv('../imdb_files/{name}.tsv.gz', delim='\t', quote='', all_varchar=true, header=true, AUTO_DETECT=TRUE)"
     tables:
       - name: name.basics
       - name: title.akas
