--- a/models/imdb/title_akas_model.yml
+++ b/models/imdb/title_akas_model.yml
@@ -2,7 +2,7 @@
 version: 2
 
 models:
-  #- name: title_akas_model
+  #- name: title_akas_model_casted
   - name: title_akas_model_cleansed
     description: "A regional title alias"
     tests:
