--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,4 +1,3 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
@@ -33,5 +32,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   imdb_dataset_article:
     # Config indicated by + and applies to all files under models/example/
-    imdb:
-      +materialized: view
+    imdb_bronze:
+      +schema: imdb_bronze
+    imdb_intermediate:
+      +schema: imdb_intermediate
+    imdb_silver:
+      +schema: imdb_silver
+    imdb_kuzu:
+      +schema: imdb_kuzu
