fix: move to proper places

--- a/models/imdb_silver/name_basics_model.yml
+++ b/models/imdb_silver/name_basics_model.yml
@@ -24,6 +24,7 @@ models:
       - name: birthYear
         description: "in YYYY format"
         tests:
+          - not_null
           - dbt_utils.expression_is_true:
               expression: ' >= 1000'
           - dbt_utils.expression_is_true:
